Update ConcretePiece.java